# FivemCipherFinder

./: .gitignore  .pylintrc  CMakeLists.txt  DISCLAIMER.md  LICENSE  Makefile  POWERSHELL_INSTALL.md  README.md  dev.ps1  install.ps1  local_run.ps1  main.py  main.sh  playground.py  pyproject.toml  req  setup.cfg
.github/workflows/: flake8.yml  publish.yml  pylint.yml  pytest.yml  rust_check.yaml
cars/: mapmanager_client.lua  server.lua
cipherFinder/: __init__.py  de_obfs.py  deleter.py  deopfuscator.py  finder.py  plugins.py  utils.py
cipherFinder/web/: index.html
cipher_finder/: Cargo.toml
cipher_finder/src/: de_obfs.rs  file.rs  file_op.rs  files.rs  lib.rs  log.rs  main.rs  os.rs  utils.rs
plugins/: README.md  dummy_plugin.py  init.py  sendWebhook.py
src/: main.cpp  testFile.lua
tests/: test_de_obfs.py  test_deleter.py  test_finder.py  test_plugins.py  test_utils.py
