[metadata]
name = FiveMCipherFinder

version = 2.6.2

description = Finds Cipher in lua scripts.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = exersalza
url = https://github.com/exersalza/FivemCipherFinder
project_urls =
    Source=https://github.com/exersalza/FivemCipherFinder
    Issues=https://github.com/exersalza/FivemCipherFinder/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development

[options]
install_requires = 
    requests
    chardet
packages = cipherFinder


[options.entry_points]
console_scripts =
    find-cipher = cipherFinder:entry_point
